// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`services > file > downloadFile > success 1`] = `
{
  "Body": {
    "pipe": [MockFunction],
  },
}
`;

exports[`services > file > finishUploadMultipartFile > success 1`] = `
{
  "_id": "mockFileId",
  "avScan": {
    "aggregate": [MockFunction],
    "append": [MockFunction],
    "filter": [MockFunction],
    "find": [MockFunction] {
      "calls": [
        [
          {
            "fileId": "mock-id",
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "group": [MockFunction],
    "lookup": [MockFunction],
    "map": [MockFunction],
    "match": [MockFunction],
    "sort": [MockFunction],
    "unwind": [MockFunction],
  },
  "complete": true,
  "createdAt": 2024-01-01T00:00:00.000Z,
  "id": "mock-id",
  "mime": "mock/mime",
  "modelId": "mockModelId",
  "name": "mockFileName",
  "path": "/mock/path",
  "size": 100,
  "tags": [],
  "updatedAt": 2024-01-02T00:00:00.000Z,
}
`;

exports[`services > file > getFilesByIds > success 1`] = `
[
  {
    "_id": {
      "toString": [MockFunction],
    },
    "avScan": [],
    "example": "file",
  },
]
`;

exports[`services > file > getFilesByIds > success with scans mapped 1`] = `
[
  {
    "_id": "123",
    "avScan": [
      {
        "fileId": "123",
      },
      {
        "fileId": "123",
      },
    ],
    "example": "file",
  },
  {
    "_id": "321",
    "avScan": [
      {
        "fileId": "321",
      },
    ],
    "example": "file",
  },
]
`;

exports[`services > file > getFilesByModel > success 1`] = `
[
  {
    "_id": {
      "toString": [MockFunction],
    },
    "example": "file",
  },
]
`;

exports[`services > file > removeFile > success 1`] = `
{
  "_id": {
    "toString": [MockFunction] {
      "calls": [
        [],
      ],
      "results": [
        {
          "type": "return",
          "value": "73859F8D26679D2E52597326",
        },
      ],
    },
  },
  "id": "73859F8D26679D2E52597326",
  "modelId": "testModel",
}
`;

exports[`services > file > removeFiles > success 1`] = `
[
  [
    {
      "fileId": {
        "$eq": "73859F8D26679D2E52597326",
      },
    },
    undefined,
  ],
  [
    {
      "fileId": {
        "$eq": "62379525E2D97662D8F95837",
      },
    },
    undefined,
  ],
]
`;

exports[`services > file > removeFiles > success 2`] = `
[
  {
    "_id": {
      "toString": [MockFunction] {
        "calls": [
          [],
        ],
        "results": [
          {
            "type": "return",
            "value": "73859F8D26679D2E52597326",
          },
        ],
      },
    },
    "id": "73859F8D26679D2E52597326",
    "modelId": "testModel",
  },
  {
    "_id": {
      "toString": [MockFunction] {
        "calls": [
          [],
        ],
        "results": [
          {
            "type": "return",
            "value": "62379525E2D97662D8F95837",
          },
        ],
      },
    },
    "id": "62379525E2D97662D8F95837",
    "modelId": "testModel2",
  },
]
`;

exports[`services > file > removeFiles > success bypass mirrored model check 1`] = `
[
  [
    {
      "fileId": {
        "$eq": "73859F8D26679D2E52597326",
      },
    },
    undefined,
  ],
  [
    {
      "fileId": {
        "$eq": "62379525E2D97662D8F95837",
      },
    },
    undefined,
  ],
]
`;

exports[`services > file > removeFiles > success bypass mirrored model check 2`] = `
[
  {
    "_id": {
      "toString": [MockFunction] {
        "calls": [
          [],
        ],
        "results": [
          {
            "type": "return",
            "value": "73859F8D26679D2E52597326",
          },
        ],
      },
    },
    "id": "73859F8D26679D2E52597326",
    "modelId": "testModel",
  },
  {
    "_id": {
      "toString": [MockFunction] {
        "calls": [
          [],
        ],
        "results": [
          {
            "type": "return",
            "value": "62379525E2D97662D8F95837",
          },
        ],
      },
    },
    "id": "62379525E2D97662D8F95837",
    "modelId": "testModel2",
  },
]
`;

exports[`services > file > startUploadMultipartFile > success 1`] = `
{
  "chunks": [
    {
      "endByte": 5242879,
      "startByte": 0,
    },
    {
      "endByte": 10485759,
      "startByte": 5242880,
    },
  ],
  "file": {
    "_id": {
      "toString": [Function],
    },
    "aggregate": [MockFunction],
    "append": [MockFunction],
    "complete": false,
    "delete": [MockFunction],
    "deleteMany": [MockFunction],
    "deleteOne": [MockFunction],
    "find": [MockFunction],
    "findById": [MockFunction],
    "findByIdAndDelete": [MockFunction],
    "findOne": [MockFunction],
    "findOneAndDelete": [MockFunction],
    "findOneAndUpdate": [MockFunction],
    "group": [MockFunction],
    "lookup": [MockFunction],
    "markModified": [MockFunction],
    "match": [MockFunction],
    "mime": "text/plain",
    "modelId": "testModelId",
    "name": "testFile",
    "path": "beta/model/testModelId/files/mock-long-id",
    "save": [MockFunction] {
      "calls": [
        [],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "sort": [MockFunction],
    "tags": [],
    "toObject": [MockFunction],
    "update": [MockFunction],
    "updateMany": [MockFunction],
    "updateOne": [MockFunction],
  },
  "uploadId": "uploadId",
}
`;

exports[`services > file > updateFile > success 1`] = `
{
  "_id": {
    "toString": [MockFunction] {
      "calls": [
        [],
        [],
      ],
      "results": [
        {
          "type": "return",
          "value": "73859F8D26679D2E52597326",
        },
        {
          "type": "return",
          "value": "73859F8D26679D2E52597326",
        },
      ],
    },
  },
  "id": "73859F8D26679D2E52597326",
  "modelId": "testModel",
}
`;

exports[`services > file > updateFile > success multiple params 1`] = `
{
  "_id": {
    "toString": [MockFunction] {
      "calls": [
        [],
        [],
      ],
      "results": [
        {
          "type": "return",
          "value": "73859F8D26679D2E52597326",
        },
        {
          "type": "return",
          "value": "73859F8D26679D2E52597326",
        },
      ],
    },
  },
  "id": "73859F8D26679D2E52597326",
  "modelId": "testModel",
}
`;

exports[`services > file > uploadFile > success 1`] = `
{
  "_id": "mockFileId",
  "avScan": {
    "aggregate": [MockFunction],
    "append": [MockFunction],
    "filter": [MockFunction],
    "find": [MockFunction] {
      "calls": [
        [
          {
            "fileId": "mock-id",
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "group": [MockFunction],
    "lookup": [MockFunction],
    "map": [MockFunction],
    "match": [MockFunction],
    "sort": [MockFunction],
    "unwind": [MockFunction],
  },
  "complete": true,
  "createdAt": 2024-01-01T00:00:00.000Z,
  "id": "mock-id",
  "mime": "text/plain",
  "modelId": "testModelId",
  "name": "testFile",
  "path": "beta/model/testModelId/files/mock-long-id",
  "size": 100,
  "tags": [],
  "updatedAt": 2024-01-02T00:00:00.000Z,
}
`;

exports[`services > file > uploadFile > virus scan initialised 1`] = `
{
  "_id": "mockFileId",
  "avScan": {
    "aggregate": [MockFunction],
    "append": [MockFunction],
    "filter": [MockFunction],
    "find": [MockFunction] {
      "calls": [
        [
          {
            "fileId": "mock-id",
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "group": [MockFunction],
    "lookup": [MockFunction],
    "map": [MockFunction],
    "match": [MockFunction],
    "sort": [MockFunction],
    "unwind": [MockFunction],
  },
  "complete": true,
  "createdAt": 2024-01-01T00:00:00.000Z,
  "id": "mock-id",
  "mime": "text/plain",
  "modelId": "testModelId",
  "name": "testFile",
  "path": "beta/model/testModelId/files/mock-long-id",
  "size": 100,
  "tags": [],
  "updatedAt": 2024-01-02T00:00:00.000Z,
}
`;

exports[`services > file > uploadFile > virus scan initialised 2`] = `[]`;
